--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       /* Мобильное устройство в портретной ориентации */
       @media screen and (orientation:portrait) and (max-width: 768px) {
         body::before {
-          content: "Пожалуйста, поверните устройство в горизонтальный режим";
+          content: "Пожалуйста, поверните устройство в горизонтальный режим 
+		  🙂";
           position: fixed;
           top: 0; left: 0;
           width: 100vw;
